--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ancient.agro</groupId>
 	<artifactId>orderManagement</artifactId>
-	<name>orderManagement</name>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
+		<name>orderManagement</name>
 	<properties>
 		<java-version>1.6</java-version>
 		<org.springframework-version>4.0.5.RELEASE</org.springframework-version>
@@ -163,11 +163,23 @@
 			<version>4.7</version>
 			<scope>test</scope>
 		</dependency>
+	<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derby</artifactId>
+			<version>10.11.1.1</version>
+			
+		</dependency>		
     <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.databind-version}</version>
         </dependency>
+<dependency>
+	<groupId>com.fasterxml.jackson.datatype</groupId>
+	<artifactId>jackson-datatype-joda</artifactId>
+	<version>${jackson.databind-version}</version>
+</dependency>
+        
 	</dependencies>
     <build>
         <resources>
